--- a/simpleclient/pom.xml
+++ b/simpleclient/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.prometheus</groupId>
         <artifactId>parent</artifactId>
-        <version>0.15.1-SNAPSHOT</version>
+        <version>0.15.0/version>
     </parent>
 
     <artifactId>simpleclient</artifactId>
@@ -61,4 +61,20 @@
           <scope>test</scope>
       </dependency>
   </dependencies>
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.1.5.RELEASE</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>repackage</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+      </plugins>
+    </build>
 </project>
